[package]
name = "doctave"
version = "0.4.3"
authors = ["Niklas Begley <nik@doctave.com>"]
edition = "2024"

[dependencies]
clap = "2.34"
walkdir = "2.3"
doctave-markdown = { git = "https://github.com/wilkart/doctave-markdown", tag = "v0.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
handlebars = "3.4"
lazy_static = "1.4"
tiny_http = "0.6"
ascii = "0.8"
http = "1.3"
notify = "4.0"
tungstenite = { version = "0.11", default-features = false }
serde_json = { version = "1.0", default-features = false }
crossbeam-channel = "0.5"
elasticlunr-rs = { version = "3.0", default-features = false }
bunt = "0.2"
scoped_threadpool = "0.1"
bus = "2.2"
rayon = "1.4"
colorsys = "0.6"
alphanumeric-sort = "1.4"
include_dir = "0.7"

[dev-dependencies]
indoc = "1.0"
